--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,8 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            debuggable true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-        profile {
-            initWith debug
         }
     }
     compileOptions {
@@ -65,7 +63,4 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    debugImplementation 'com.example.video_module_example:flutter_debug:1.0'
-    profileImplementation 'com.example.video_module_example:flutter_profile:1.0'
-    releaseImplementation 'com.example.video_module_example:flutter_release:1.0'
 }
