--- a/settings.gradle
+++ b/settings.gradle
@@ -1,18 +1,11 @@
 import org.gradle.api.initialization.resolve.RepositoriesMode
 
-String storageUrl = System.env.FLUTTER_STORAGE_BASE_URL ?: "https://storage.googleapis.com"
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
+    repositoriesMode.set(RepositoriesMode.PREFER_PROJECT)
     repositories {
         google()
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
-        maven {
-            url 'D:/Appwise/video_module_example/build/host/outputs/repo'
-        }
-        maven {
-            url "$storageUrl/download.flutter.io"
-        }
     }
 }
 rootProject.name = "mobile_player_android"
