--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,13 @@
 workflows:
-  android-app:
-    name: Android App
+  android-workflow:
+    name: Native Android
+    max_build_duration: 60
     scripts:
-      - ./gradlew assembleDebug
+      - name: Build debug apk
+        script: ./gradlew assembleDebug
     artifacts:
-      - build/outputs/**/**/*.apk
+      - app/build/**/outputs/**/*.apk
+    publishing:
+      email:
+        recipients:
+          - daniel.zaczek@appwise.pl
