--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,10 +2,30 @@ workflows:
   android-workflow:
     name: Native Android
     max_build_duration: 60
+    instance_type: mac_mini
+    environment:
+      groups:
+        - keystore_credentials
+      vars:
+        CM_KEYSTORE_PATH: /tmp/keystore.keystore
+      node: latest
     scripts:
-      - name: Build debug apk
-        script: ./gradlew assembleDebug
-      - name: Build debug apk
+      - name: Print directions
+        script: echo $CM_BUILD_DIR ; pwd
+      - name: Set up local properties
+        script: echo "sdk.dir=$ANDROID_SDK_ROOT" > "$CM_BUILD_DIR/local.properties"
+      - name: Set up key.properties file for code signing
+        script: |
+          echo $CM_KEYSTORE | base64 --decode > $CM_KEYSTORE_PATH
+          cat >> "$CM_BUILD_DIR/android/key.properties" <<EOF
+          storePassword=$CM_KEYSTORE_PASSWORD
+          keyPassword=$CM_KEY_PASSWORD
+          keyAlias=$CM_KEY_ALIAS
+          storeFile=$CM_KEYSTORE_PATH
+          EOF    
+      - name: Build release apk
+        script: ./gradlew assembleRelease
+      - name: print all apk
         script: ls app/build/outputs/apk/debug/*.apk
     artifacts:
       - app/build/outputs/apk/debug/*.apk
