--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -14,10 +14,18 @@ workflows:
         script: echo $CM_BUILD_DIR ; pwd
       - name: Set up local properties
         script: echo "sdk.dir=$ANDROID_SDK_ROOT" > "$CM_BUILD_DIR/local.properties"
+      - name: ls CM_BUILD_DIR
+        script: ls $CM_BUILD_DIR
+      - name: ls CM_BUILD_DIR
+        script: ls 
+      - name: Set up local properties
+        script: ls "$CM_BUILD_DIR/android/"
+      - name: Set up local properties
+        script: ls $CM_BUILD_DIR
       - name: Set up key.properties file for code signing
         script: |
           echo $CM_KEYSTORE | base64 --decode > $CM_KEYSTORE_PATH
-          cat >> "$CM_BUILD_DIR/android/key.properties" <<EOF
+          cat >> "$CM_BUILD_DIR/key.properties" <<EOF
           storePassword=$CM_KEYSTORE_PASSWORD
           keyPassword=$CM_KEY_PASSWORD
           keyAlias=$CM_KEY_ALIAS
