--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -29,6 +29,8 @@ workflows:
         script: cat key.properties
       - name: print properties
         script: ls $CM_KEYSTORE_PATH
+      - name: Build release apk
+        script: ./gradlew assembleRelease
       - name: print all apk
         script: ls app/build/outputs/apk/debug/*.apk
     artifacts:
